@@ -1,5 +1,8 @@
 2009-08-09  TOKI Yoshinori  <toki@freedom.ne.jp>
 
+	* lib/gluon/controller.rb: assumed that request parameters is Hash
+	object, not Rack::Request object.
+
 	* lib/gluon/controller.rb: inheritance of gluon path-filter.
 
 	* lib/gluon/controller.rb: memoization for class method.
